[WIP] API v2: allow users to enqueue buildsets
By calling POST https://fqdn/manage/v2/buildsets/ with the adequate
arguments, authorized users can enqueue builds on any pipeline.

Missing: sf-config integration
